Allow selecting exact date range

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <label>
   From:
-  <input type="month" id="from-month" value="2025-01" />
+  <input type="date" id="from-date" />
 </label>
 <label>
   To:
-  <input type="month" id="to-month" value="2025-07" />
+  <input type="date" id="to-date" />
 </label>
 <button id="confirm-range">Confirm</button>
 
