--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Stats</title>
     
-    <script src="http://localhost:3030/code/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
 
     <link rel="stylesheet"  href="demo.css" />
 
@@ -25,7 +25,7 @@
 <div id="container-total"></div>
 <div id="last-updated"></div>
 
-    <script src="stats.js"></script> 
+<script src="stats.js"></script> 
 
 </body>
 </html>
